# prompt_builder

./: .gitignore  README.md  install_ubuntu.sh  main.py  notion_mvp.py  pyproject.toml  python_prompt_builder_spec.md  system_prompt.md
.prompt_sessions/: uv-install.json
prompt_builder/: __init__.py  core.py  ui.py
prompt_builder/icons/: README.md
src/context_builder/: __init__.py  cli.py  config.py  core.py  curator.py  ui.py  ui_prototype.py
tests/: test_core.py
