[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "context-builder"
version = "0.1.0"
description = "PySide context builder for repository-aware JSON context structures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=7.5.0",
    "notion-client>=3.1.0",
    "pyside6>=6.11.1",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[project.scripts]
context-builder = "context_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
context_builder = ["icons/**/*.svg", "icons/**/*.png", "logo.svg", "logo.png"]

[tool.uv]
package = true
